<resources>
    <string name="app_name">Buddies</string>
    <string name="who_title">Who?</string>
    <string name="what_title">What?</string>
    <string name="when_title">When?</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title_text">Buddies</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>
    <string name="create_new_event_enabled">Create New Event!</string>
    <string name="create_new_event_disabled">Choose Event Details</string>
    <string name="create_group">Create Group!</string>
    <string name="create_group_button">New Group</string>

    <!-- Keys to Extras -->
    <string name="extra_current_user_model">Current User Model Extra</string>
    <string name="extra_current_user_id">Current User ID Extra</string>
    <string name="extra_current_event_model">Current Event Model Extra</string>
    <string name="extra_current_event_id">Current Event ID Extra</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="app_description">Hanging out with friends was never easier</string>
    <string name="friends_hanging">Friends Hanging</string>
    <string name="where_title">where?</string>
    <string name="tentative_msg">Tentative</string>
    <string name="decline_msg">decline</string>
    <string name="approve_msg">approve</string>
    <string name="tab_text_1">tab_text_1</string>
    <string name="tab_text_2">tab_text_2</string>
    <string name="tab_text_3">tab_text_3</string>
    <string name="change_rsvp_msg_prefix">Changed RSVP to</string>
    <string name="rsvp_bottom_bar_question">Going?</string>
    <string name="error_loading_user_rsvp_text">\"Error loading RSVP\"</string>
    <string name="ORANGE">#ffa500</string>
    <string name="event_title_hint">Enter event title</string>
    <string name="event_image_desc">The event\'s image</string>
    <string name="choose_group_name_hint">Enter group name</string>
    <string name="confirmation_button_text">Yes</string>
    <string name="rejection_button_text">No</string>
    <string name="unconfirmed_button_text">Maybe</string>
    <string name="sign_out_button_text">Sign Out</string>

</resources>
