<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ViewSingleEventActivity">



    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scroll_view_single_event"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_app_bar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/g_map">

                <TextView
                    android:id="@+id/toolbar_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="" />
                <ImageView
                    android:contentDescription="@string/show_comments_description"
                    android:id="@+id/icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="viewCommentsClicked"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/comment_btn" />

            </androidx.appcompat.widget.Toolbar>



            <fragment
                android:id="@+id/g_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"/>


            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/details_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="3"
                app:layout_constraintTop_toBottomOf="@id/g_map"
                tools:context=".ListViewWithImageAndText">

                <TableRow>

                    <TextView
                        android:id="@+id/date_textView"
                        android:gravity="start"
                        android:padding="3dip"
                        android:textAlignment="textStart"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/hour_textView"
                        android:gravity="start"
                        android:padding="3dip"
                        android:textAlignment="textStart"
                        android:textSize="24sp" />
                </TableRow>


            </TableLayout>

            <ListView
                android:id="@+id/rsvp_listview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_table" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Other components and views -->

        <com.google.android.material.bottomappbar.BottomAppBar
            style="@style/Widget.MaterialComponents.BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:padding="0dp"
            android:singleLine="true"
            app:buttonGravity="bottom|top"
            app:fabAlignmentMode="end">

            <TextView
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:clickable="false"
                android:gravity="center"
                android:padding="3dp"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"

                android:text="@string/rsvp_bottom_bar_question" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/approve_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onRSVPChangeClick"
                android:singleLine="true"
                android:text="@string/confirmation_button_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/decline_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onRSVPChangeClick"
                android:singleLine="true"
                android:text="@string/rejection_button_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tentative_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="onRSVPChangeClick"
                android:padding="3dp"
                android:singleLine="true"
                android:text="@string/unconfirmed_button_text" />

        </com.google.android.material.bottomappbar.BottomAppBar>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
